changes to the db to fix returning too much data.

--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -4,4 +4,5 @@ html * {
 }
 Link li ul * {
   text-decoration: none;
+  color: black;
 }
