--- a/src/styles/_Dashboard.scss
+++ b/src/styles/_Dashboard.scss
@@ -1,7 +1,11 @@
 
+h4 * {
+    color: black;
+}
 .dashboard_container {
     height: 100%;
     width: 100%;
+    color:black;
 }
 .image_header {
     height: 58vh;
