--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -16,6 +16,7 @@
 }
 } */
 .header_container {
+    color:#ffffff;
     height: 100px;
     width: 100vw;
     // background-color:#07020d;
